--- a/index.html
+++ b/index.html
@@ -67,22 +67,28 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" 
-            alt="создание сайта" 
-            width="370"
-            height="294"/>
+            <img
+              src="./images/img.jpg"
+              alt="создание сайта"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/img(1).jpg" 
-            alt="адаптация сайта"
-            width="370"
-            height="294"/>
+            <img
+              src="./images/img(1).jpg"
+              alt="адаптация сайта"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/img(2).jpg" 
-            alt="разработка дизайна" 
-            width="370" 
-            height="294"/>
+            <img
+              src="./images/img(2).jpg"
+              alt="разработка дизайна"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -91,34 +97,42 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img(4).jpg" 
-            alt="Игорь Демьяненко" 
-            width="270"
-            height="260"/>
+            <img
+              src="./images/img(4).jpg"
+              alt="Игорь Демьяненко"
+              width="270"
+              height="260"
+            />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img(5).jpg" 
-            alt="Ольга Репина" 
-            width="270"
-            height="260"/>
+            <img
+              src="./images/img(5).jpg"
+              alt="Ольга Репина"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img(6).jpg" 
-            alt="Николай Тарасов" 
-            width="270"
-            height="260"/>
+            <img
+              src="./images/img(6).jpg"
+              alt="Николай Тарасов"
+              width="270"
+              height="260"
+            />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img(7).jpg" 
-            alt="Михаил Ермаков"
-            width="270"
-            height="260"/>
+            <img
+              src="./images/img(7).jpg"
+              alt="Михаил Ермаков"
+              width="270"
+              height="260"
+            />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -129,7 +143,7 @@
     <footer>
       <a href="">WebStudio</a>
       <address>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380991111111">+380991111111</a></li>
